--- a/app_folder/auth/templates/home.html
+++ b/app_folder/auth/templates/home.html
@@ -16,7 +16,17 @@
   You are logged in as {{ current_user.username }}!
   <a href="{{ url_for("auth.logout") }}">Log out</a>
 {% else %}
-  You are not logged in.
-  <a href="{{ url_for("github.login") }}">Log in using Github</a>
+<p>
+    You are not logged in.
+    <a href="{{ url_for("github.login") }}">Log in using Github</a>
+</p>
+<p>
+    You are not logged in.
+    <a href="{{ url_for("google.login") }}">Log in using Google</a>
+</p>
+<p>
+    You are not logged in.
+    <a href="{{ url_for("twitter.login") }}">Log in using Twitter</a>
+</p>
 {% endif %}
 </body>
