Rewrite of github view for user required parameter.
Enforce the pattern of the github oauth signal for a user to be passed with
every oauth token being requested.

--- a/app_folder/auth/templates/home.html
+++ b/app_folder/auth/templates/home.html
@@ -28,5 +28,9 @@
     You are not logged in.
     <a href="{{ url_for("twitter.login") }}">Log in using Twitter</a>
 </p>
+<p>
+    You are not logged in.
+    <a href="{{ url_for("facebook.login") }}">Log in using Facebook</a>
+</p>
 {% endif %}
 </body>
